Replace EBADFD with EBADF

Using EBADF is more portable and correct because EBADFD means a file
descriptor in bad state, not an invalid file descriptor.

https://bugzilla.gnome.org/show_bug.cgi?id=759197